# poetry-test

./: .gitignore  README.md  pyproject.toml
config/: settings.py
